...
        android:layout_width="606dp"
        android:layout_height="661dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...

                        <ImageButton
                            android:id="@+id/eyesBlueButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <ImageButton
                            android:id="@+id/eyesGreenButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <ImageButton
                            android:id="@+id/hair6Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <ImageButton
                            android:id="@+id/hair1LightButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <ImageButton
                            android:id="@+id/skinColourDarkButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <ImageButton
                            android:id="@+id/skinColourTanButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <ImageButton
                            android:id="@+id/shirtOrangeButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <ImageButton
                            android:id="@+id/shirtBlueButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/shirtImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/skinColourImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/hairImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <ImageView
                    android:id="@+id/eyesImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
